fixes: spacing

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -17,7 +17,7 @@
   }
 
   a.nav {
-    @apply text-white transition-all ease-in-out;
+    @apply text-white transition-all ease-in-out active:underline active:decoration-teal-500 active:decoration-4 active:underline-offset-[20px];
   }
 
   a.nav[aria-current] {
